<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
         android:textColor="@color/audiotext"
        android:text="@string/text_1" />
    
    <RadioGroup
         android:id="@+id/radioGroup1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left" >


                        <RadioButton
                            android:id="@+id/radio0"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginTop="40dp"
                            android:checked="true"
                             android:textColor="@color/audiotext"
                             android:onClick="onClickSave"
                            android:text="@string/radio_eng" />


                        <RadioButton
                            android:id="@+id/radio1"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:textColor="@color/audiotext"
                            android:onClick="onClickSave"
                            android:text="@string/radio_hi" />


                        <RadioButton
                            android:id="@+id/radio2"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:textColor="@color/audiotext"
                            android:onClick="onClickSave"
                            android:text="@string/radio_ta" />

       </RadioGroup>
       
     

</LinearLayout>